// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationItem - Snapshots > matches snapshot for Follow notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink truncate text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
        data-testid="typography"
      >
        <a
          class="no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline"
          href="/profile/user1"
        >
          followed you
        </a>
      </p>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/profile/user1"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30m
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="follow"
    >
      Icon
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for Mention notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink truncate text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
        data-testid="typography"
      >
        <a
          class="no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline"
          href="/post/user1/post123"
        >
          mentioned you in post
        </a>
      </p>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/post/user1/post123"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30m
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="mention"
    >
      Icon
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for TagPost notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink truncate text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
        data-testid="typography"
      >
        <a
          class="no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline"
          href="/post/user1/post123"
        >
          tagged your post
        </a>
      </p>
      <span
        data-testid="post-tag"
      >
        bitcoin
      </span>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/post/user1/post123"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30m
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="tag_post"
    >
      Icon
    </div>
  </a>
</div>
`;
